# clientai

./: README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
docs/pt/: index.md
docs/pt/usage/: overview.md
